ajout de la visualitation de l'exercice 1 format html

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
   <h1>TEST</h1>
+  <button onclick="document.location='interactive_graphs.html'">Visualisation exercice 1</button>
 </body>
 </html>
