mise à jour du site et des pages html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <script src="script.js"></script>
 </head>
 <body>
-  <h1>TEST</h1>
-  <button onclick="document.location='interactive_graphs.html'">Visualisation exercice 1</button>
+  <h1>PROJET DE VISUALISATION MONGODB</h1>
+  <button onclick="document.location='map.html'">Visualisation Exercice 1</button>
+  <button onclick="document.location='interactive_graphs.html'">Visualisation Exercice 2</button>
+  <button onclick="document.location='exo3_MongoDB.html'">Visualisation Exercice 3</button>
 </body>
 </html>
