--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="u-border-4 u-border-palette-3-base u-container-layout u-container-layout-1"><span class="u-file-icon u-icon u-text-palette-3-base u-icon-1"><img src="images/5.png" alt=""></span>
                   <h3 class="u-custom-font u-font-oswald u-text u-text-palette-3-base u-text-1">COVID-19</h3>
                   <br>
-                  <p class="u-text u-text-font u-text-white u-text-2">Visualisation sur les entres de vaccination Covid19</p>
+                  <p class="u-text u-text-font u-text-white u-text-2">Visualisation sur les centres de vaccination Covid19</p>
                   <br>
                   <br>
                   <button class="button-59" onclick="document.location='map.html'">Voir la visualisation</button>
